--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-include ':webview-gm-lib', ':webview-gm-ui', ':webview-gm-demo'
+include ':webview-gm-lib'
+//include ':webview-gm-ui'
+//include  ':webview-gm-demo'
