--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+//        classpath 'com.android.tools.build:gradle:7.0.4'
 //        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
 //        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.android.tools.build:gradle:4.2.2'
     }
 }
 
